syntax = "proto3";


package common;

// ResourceConfig represents a configuration item.
message ResourceConfig {
  string resource_key = 1;
  string alias = 2;
  string name = 3;
  string environment_key = 4;
  string pipeline_key = 5;
  string content = 6;
  string type = 7;
  string remark = 8;
  bool is_perm = 9;
}

// FileAsset represents an uploaded file.
message FileAsset {
  string file_id = 1;
  string environment_key = 2;
  string pipeline_key = 3;
  string file_name = 4;
  string content_type = 5;
  int64 file_size = 6;
  string url = 7;
  string remark = 8;
}

// OperateResponse is a common response for operations.
message OperateResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
}

message Empty {}
